--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@ margin-top:2rem;
 #terminology dl dd{margin:1rem 0 2rem 1rem;padding-bottom:2rem;}
 </style>
 
-<script src="js/jquery-3.7.1.min.js"></script>
-<script src="js/bootstrap.bundle.min.js"></script>
+<script src="https://aaron-fecowycz.github.io/radio-communications/js/jquery-3.7.1.min.js"></script>
+<script src="https://aaron-fecowycz.github.io/radio-communications/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.2/html2pdf.bundle.min.js" integrity="sha512-MpDFIChbcXl2QgipQrt1VcPHMldRILetapBl5MPCA9Y8r7qvlwx1/Mc9hNTzY+kS5kX6PdoDq41ws1HiVNLdZA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="js/radio-coms.js"></script>
+<script src="https://aaron-fecowycz.github.io/radio-communications/js/radio-coms.js"></script>
 
 
 </head>
@@ -1745,3 +1745,4 @@ margin-top:2rem;
 </body>
 
 </html>
+
