--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@ margin-top:2rem;
 		</div>
 		
 		<div class="form-group">
-		<label for="ecp_cp_command_point_location" class="form-label">Command Point Location </label><textarea id="ecp_cp_command_point_location" class="form-control"></textarea>
+		<label for="ecp_cp_command_point_location" class="form-label">Command Point Location (optional)</label><textarea id="ecp_cp_command_point_location" class="form-control"></textarea>
 		</div>
 		
 		<div class="form-group">
@@ -1754,6 +1754,7 @@ margin-top:2rem;
 </body>
 
 </html>
+
 
 
 
